<resources>
    <string name="app_name">PhoneManager</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_username_hint">Enter your email</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="login_full_name_hint">Enter your full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="have_an_account">Have an account? </string>
    <string name="dont_have_account">Don\'t have account? </string>
    <string name="write_something">Write Something</string>
    <string name="utilities">Utilities</string>
    <string name="lock_your_apps">Lock your apps</string>
    <string name="limit_your_phone_usage">Limit your phone usage</string>
    <string name="create_family_account">Create family account</string>
    <string name="connect_supervisor_account">Connect supervisor account</string>
    <string name="view_your_family">View your accounts management</string>
    <string name="send_your_words">Send your words</string>
    <string name="input_to_search">Input to search</string>

    <string name="permission_needed">Bạn cần cấp quyền cho ứng dụng để có thể hoạt động</string>
    <string name="give_permission">Cấp quyền</string>
    <string name="lock_screen">Lock screen</string>

    <string name="create_pattern">Create new pattern</string>
    <string name="redraw_pattern">Redraw pattern</string>
    <string name="draw_to_open">Draw pattern to open app</string>
    <string name="wrong_pattern">Pattern does not match.\nRedraw</string>
    <string name="short_pattern">Pattern too short.\nAt least 3 dots</string>
    <string name="recommend_lock">Recommend to Lock</string>
    <string name="create_account">Create account</string>
    <string name="logout">Logout</string>
    <string name="limit_your_usage">Limit your usage</string>
    <string name="limit_your_app_usage">Limit your app usage</string>
    <string name="_00">00</string>
    <string name="h">h</string>
    <string name="m">m</string>
    <string name="agree">Agree</string>
    <string name="cancel">Cancel</string>
    <string name="you_have_reach_your_limit">You have reach your limit</string>
    <string name="your_sub_accounts">Your sub accounts</string>
    <string name="_123">123</string>
    <string name="apps">Apps</string>
    <string name="write_something_post">write somethings</string>

    <string name="comment">Bình luận</string>
    <string name="share">Chia sẻ</string>

    <string name="like">%1$d lượt thích</string>
    <string name="no_like">Hãy là người thích đầu tiên</string>
    <string name="like_status">Thích</string>
    <string name="personal">Personal</string>
    <string name="role_picker">Tell we who you are</string>
    <string name="school">School</string>
    <string name="family">Family</string>
    <string name="office">Office</string>
    <string name="use_another_role">Use another role?</string>
    <string name="pick">Pick</string>
    <string name="your_age">Your age</string>
    <string name="permission_ask">You will need to allow the following permission:</string>
    <string name="app_usage">App usage</string>
    <string name="allow">Allow</string>
    <string name="overlay">Overlay</string>
    <string name="allowed">Allowed</string>
    <string name="setting">Setting</string>
    <string name="app_list">Apps</string>
    <string name="history">Usage</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="running">App is running</string>
    <string name="account">Account</string>
    <string name="lock">Lock</string>
    <string name="account_setting">Account Setting</string>
    <string name="password_hint">**********</string>
    <string name="change">Change</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="view_your_usage">View your usage</string>
    <string name="view">Your phone usage in:</string>
    <string name="log_out">Log out</string>
    <string name="parent_account_management">Accounts</string>
    <string name="create_sub_account">Create sub account</string>
    <string name="enter_your_kid_name">Enter your kid name</string>
    <string name="enter_password">Enter password</string>
    <string name="your_partner">Your partner</string>
    <string name="add_partner">Add partner</string>
    <string name="your_kids">Your kids</string>
    <string name="add_your_kid">Add your kid</string>
    <string name="enter_you_child_name">Enter you child name</string>
    <string name="search">Search</string>
    <string name="enter_your_partner_name">Enter your partner name</string>
    <string name="login_information_missing">Missing information</string>
    <string name="unknown_error">Something wrong happened</string>
    <string name="loading">Loading...</string>
    <string name="main">Main</string>
    <string name="greeting_user">Hi, %1$s</string>
    <string name="lock_list">Lock list</string>
    <string name="limit_list">Limit list</string>
    <string name="usage_percentage">%2.2f (%%)</string>
    <string name="skip">Skip</string>
    <string name="limit">Limit</string>
    <string name="lock_or_unlock">Lock/Unlock</string>
    <string name="Unlock">Unlock</string>
    <string name="phone_number">Phone number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="parent">Parent</string>
    <string name="kid">Kid</string>
    <string name="teacher">Teacher</string>
    <string name="nothing_found">Nothing found</string>
    <string name="class_management">Class</string>
    <string name="create_class">Create class</string>
    <string name="classname">Classname</string>
    <string name="enter_classname">Enter classname</string>
    <string name="grade">Grade</string>
    <string name="subject">Subject</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enter_grade">Enter Grade</string>
    <string name="create">Create</string>
    <string name="get_classname">Classname: %1$s</string>
    <string name="get_class_teacher_name">Teacher: %1$s</string>
    <string name="get_subject_name">Subject: %1$s</string>
    <string name="get_class_id">ID: %1$s</string>
    <string name="student_list">Student list</string>
    <string name="notification">Notification</string>

    <string name="notification_title_new_request">You have new request</string>
    <string name="notification_title_request_accepted">You have a request responded</string>
    <string name="notification_title_request_denied">Request denied</string>
    <string name="request">My request</string>
    <string name="denied">Deny</string>
    <string name="report">Report</string>
    <string name="viewing_report">Viewing Report</string>
    <string name="join_class_request">Join class requests</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="remove_from_class">Remove from class</string>
    <string name="ban_from_class">Ban from class</string>
    <string name="view_live">View live</string>

    <string-array name="query_usage">
        <item>1 day</item>
        <item>7 days</item>
        <item>30 days</item>
    </string-array>
</resources>