<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.b18dccn562.phonemanager.presentation.screen.main.fragments.sign_in.SignInViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main_theme"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="30dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/ScreenTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextViewPropertyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            style="@style/PropertyEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/login_username_hint"
            android:text="@={loginViewModel.mEmail}" />


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextViewPropertyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            style="@style/PropertyEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_key"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:text="@={loginViewModel.mPassword}" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forgot_password"
            style="@style/NormalTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_small"
            android:paddingTop="@dimen/padding_small"
            android:text="@string/forgot_password"
            android:textAlignment="textEnd" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_button_login"
            android:fontFamily="@font/montserrat_regular"
            android:onClick="@{() -> loginViewModel.login()}"
            android:text="@string/sign_in"
            android:textColor="#2878E9"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/NormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                style="@style/BoldNormalTextStyle"
                tools:ignore="RtlSymmetry" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
