<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signupViewModel"
            type="com.b18dccn562.phonemanager.presentation.screen.main.fragments.sign_up.SignUpViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main_theme"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="30dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/ScreenTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="5dp"
            android:text="@string/full_name"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_edittext"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/login_full_name_hint"
            android:minHeight="48dp"
            android:padding="10dp"
            android:text="@={signupViewModel.mFullName}"
            android:textColor="@color/white"
            android:textColorHint="#B3FFFFFF"
            android:textSize="17sp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="5dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_edittext"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/login_username_hint"
            android:minHeight="48dp"
            android:padding="10dp"
            android:text="@={signupViewModel.mEmail}"
            android:textColor="@color/white"
            android:textColorHint="#B3FFFFFF"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="5dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_edittext"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:text="@={signupViewModel.mPassword}"
            android:textColor="@color/white"
            android:textColorHint="#B3FFFFFF"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="5dp"
            android:text="@string/confirm_password"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_edittext"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:text="@={signupViewModel.mRePassword}"
            android:textColor="@color/white"
            android:textColorHint="#B3FFFFFF"
            android:textSize="17sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/bg_button_login"
            android:fontFamily="@font/montserrat_regular"
            android:onClick="@{() -> signupViewModel.signUp()}"
            android:text="@string/register"
            android:textColor="#2878E9"
            android:textSize="18sp"
            android:textStyle="bold" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/use_another_role"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_pick_another_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/pick"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
