<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main_theme"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="30dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/role_picker"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_button_login"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/parent"
            android:textColor="#2878E9"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_kid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_button_login"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/kid"
            android:textColor="#2878E9"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_button_login"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/teacher"
            android:textColor="#2878E9"
            android:textSize="18sp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>