<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="my_class"
            type="com.b18dccn562.phonemanager.presentation.screen.main.fragments.main_content.fragment.class_management.ClassManagementViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main_theme"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="30dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="top|start"
            app:srcCompat="@drawable/ic_back_white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/create_class"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="5dp"
            android:text="@string/classname"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_edittext"
            android:drawableStart="@drawable/ic_class"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/enter_classname"
            android:minHeight="48dp"
            android:text="@={my_class.classname}"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="#B3FFFFFF"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="5dp"
            android:text="@string/subject"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_edittext"
            android:drawableStart="@drawable/ic_number_user"
            android:drawablePadding="5dp"
            android:text="@={my_class.subject}"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/enter_subject"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="#B3FFFFFF"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="5dp"
            android:text="@string/grade"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_edittext"
            android:drawableStart="@drawable/ic_baseline_grade_24"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/enter_grade"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="10dp"
            android:onTextChanged="@{() -> my_class.handleGradeInput(etPassword)}"
            android:textColor="@color/white"
            android:textColorHint="#B3FFFFFF"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="5dp"
            android:text="@string/teacher"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/et_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_edittext"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:minHeight="48dp"
            android:padding="10dp"
            android:text="@={my_class.teacher}"
            android:textColor="@color/white"
            android:textColorHint="#B3FFFFFF"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/bg_button_login"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/create"
            android:textColor="@color/main_color"
            android:onClick="@{() -> my_class.create()}"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
