<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_dialog"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_dialog_title"
                android:fontFamily="@font/montserrat_regular"
                android:padding="15dp"
                android:text="@string/limit_your_app_usage"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_hour"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_time"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:text="@string/_00"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/h"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_minute"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_time"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:text="@string/_00"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/m"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_agree"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_bottom_left"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/agree"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_bottom_right"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>
</layout>
